2006-05-07  Stefan Petersen  <spe@localhost.localdomain>

	* configure.in: Removed GTK+ 1.2 support and builds 
	  by default for GTK+ 2.x.

2005-09-28 Dan McMahill       

	* src/drill.c: Remove an lval typecast.  Not only does this get
	  gerbv to compile with gcc4 and other non-gcc compilers, it 
	  was no longer needed as the types involved were all doubles
	  anyway.

-- Release 1.0.1 --
	
2005-02-15  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw_amacro.c: Forgot to copy gc to local_gc
	  so drawing inherits gc from image wide setting.
	  Pointed out by Warren Young.

2005-02-08  Tomasz Motylewski  <t.motylewski@bfad.de>
	* src/gerbv.c: malloc strlen+2, not +1
	* src/gerb_file.c: malloc len+1, not len

-- Release 1.0.0 --
	
2004-12-28  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw.c: When drawing circles I ignored if circle
	  had inner diameter, which was pointed out by Harry Eaton. 
	  Not anymore... Closes bug #1050340 in this branch.

2004-10-30  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw_amacro.c: Forgot to use local_gc when drawing some
	  of the primitive aperture macros. Closes bug #1051045.

2004-09-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: If you tried to invert color of an unloaded layer
	  you got a segmentation fault. I think it was discovered by Juergen.

2004-08-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/Makefile.am: Use libpng-config to find out
	  parameters to use in CFLAGS and LIBS.

2004-08-21  Stefan Petersen  <spe@stacken.kth.se>

        * src/gerbv.c: Made sure that only list of short options is 
          printed when only short options are compiled in.

2004-08-16  Stefan Petersen  <spe@stacken.kth.se>

	* doc/*, example/*: Makefiles.am removed Makefile.in wheh running
	  distclean. Not good. Spotted by Hamish Moffatt when packaging
	  for Debian.

2004-07-28  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: In gerbers the image can be negative or positive.